jsontypedrpc: silence warning on gcc 14

Silence a false positive warning on gcc 14 about an optional not being
initialized.

Fixes: QTBUG-128574
Change-Id: If370308639ed536a9217c45ffd5cb6cfe98651d9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>